# Inverted-Pendulum

./: .gitignore  CMakeLists.txt  README.md  acc_controller.cpp  inverted_pendulum_simulation.cpp  main.cpp  main.sh  params.json  plot_analysis.ipynb  plot_analysis.py  plot_cycles.py  run_portabilize_trace.sh  simulate_and_record.cpp
chip_params/cortex_m55/: PARAMS.in_0
chip_params/kaby_lake/chip_cycle_time/: PARAMS.in_0  PARAMS.in_1  PARAMS.in_2
chip_params/kaby_lake/l1_size/: PARAMS.in_1  PARAMS.in_2  PARAMS.in_3  PARAMS.in_4
chip_params/raspberry_pi_5/chip_cycle_time/: PARAMS.in_0  PARAMS.in_1  PARAMS.in_10  PARAMS.in_11  PARAMS.in_2  PARAMS.in_3  PARAMS.in_4  PARAMS.in_6  PARAMS.in_7  PARAMS.in_8  PARAMS.in_9
chip_params/raspberry_pi_5/l1_size/: PARAMS.in_0  PARAMS.in_1  PARAMS.in_2  PARAMS.in_3  PARAMS.in_4  PARAMS.in_5  PARAMS.in_6  PARAMS.in_7  PARAMS.in_8  PARAMS.in_9
controller_parameters/: params copy.json
controller_parameters/acc/: params.json
game/: main.cpp  main_visual.cpp  main_visual_params.json  nlmpc_test.cpp  params.json
include/Eigen/: ._Cholesky  ._CholmodSupport  ._Core  ._Dense  ._Eigen  ._Eigenvalues  ._Geometry  ._Householder  ._IterativeLinearSolvers  ._Jacobi  ._KLUSupport  ._LU  ._MetisSupport  ._OrderingMethods  ._PaStiXSupport  ._PardisoSupport  ._QR  ._QtAlignedMalloc  ._SPQRSupport  ._SVD  ._Sparse  ._SparseCholesky  ._SparseCore  ._SparseLU  ._SparseQR  ._StdDeque  ._StdList  ._StdVector  ._SuperLUSupport  ._UmfPackSupport  ._src
include/Eigen/src/: ._Cholesky  ._CholmodSupport  ._Core  ._Eigenvalues  ._Geometry  ._Householder  ._IterativeLinearSolvers  ._Jacobi  ._KLUSupport  ._LU  ._MetisSupport  ._OrderingMethods  ._PaStiXSupport  ._PardisoSupport  ._QR  ._SPQRSupport  ._SVD  ._SparseCholesky  ._SparseCore  ._SparseLU  ._SparseQR  ._StlSupport  ._SuperLUSupport  ._UmfPackSupport  ._misc  ._plugins
include/Eigen/src/Cholesky/: ._LDLT.h  ._LLT.h  ._LLT_LAPACKE.h
include/Eigen/src/CholmodSupport/: ._CholmodSupport.h
include/Eigen/src/Core/: ._ArithmeticSequence.h  ._Array.h  ._ArrayBase.h  ._ArrayWrapper.h  ._Assign.h  ._AssignEvaluator.h  ._Assign_MKL.h  ._BandMatrix.h  ._Block.h  ._BooleanRedux.h  ._CommaInitializer.h  ._ConditionEstimator.h  ._CoreEvaluators.h  ._CoreIterators.h  ._CwiseBinaryOp.h  ._CwiseNullaryOp.h  ._CwiseTernaryOp.h  ._CwiseUnaryOp.h  ._CwiseUnaryView.h  ._DenseBase.h  ._DenseCoeffsBase.h  ._DenseStorage.h  ._Diagonal.h  ._DiagonalMatrix.h  ._DiagonalProduct.h  ._Dot.h  ._EigenBase.h  ._ForceAlignedAccess.h  ._Fuzzy.h  ._GeneralProduct.h  ._GenericPacketMath.h  ._GlobalFunctions.h  ._IO.h  ._IndexedView.h  ._Inverse.h  ._Map.h  ._MapBase.h  ._MathFunctions.h  ._MathFunctionsImpl.h  ._Matrix.h  (+36 more)
include/Eigen/src/Eigenvalues/: ._ComplexEigenSolver.h  ._ComplexSchur.h  ._ComplexSchur_LAPACKE.h  ._EigenSolver.h  ._GeneralizedEigenSolver.h  ._GeneralizedSelfAdjointEigenSolver.h  ._HessenbergDecomposition.h  ._MatrixBaseEigenvalues.h  ._RealQZ.h  ._RealSchur.h  ._RealSchur_LAPACKE.h  ._SelfAdjointEigenSolver.h  ._SelfAdjointEigenSolver_LAPACKE.h  ._Tridiagonalization.h
include/Eigen/src/Geometry/: ._AlignedBox.h  ._AngleAxis.h  ._EulerAngles.h  ._Homogeneous.h  ._Hyperplane.h  ._OrthoMethods.h  ._ParametrizedLine.h  ._Quaternion.h  ._Rotation2D.h  ._RotationBase.h  ._Scaling.h  ._Transform.h  ._Translation.h  ._Umeyama.h  ._arch
include/Eigen/src/Householder/: ._BlockHouseholder.h  ._Householder.h  ._HouseholderSequence.h
include/Eigen/src/IterativeLinearSolvers/: ._BasicPreconditioners.h  ._BiCGSTAB.h  ._ConjugateGradient.h  ._IncompleteCholesky.h  ._IncompleteLUT.h  ._IterativeSolverBase.h  ._LeastSquareConjugateGradient.h  ._SolveWithGuess.h
include/Eigen/src/Jacobi/: ._Jacobi.h
include/Eigen/src/KLUSupport/: ._KLUSupport.h
include/Eigen/src/LU/: ._Determinant.h  ._FullPivLU.h  ._InverseImpl.h  ._PartialPivLU.h  ._PartialPivLU_LAPACKE.h  ._arch
include/Eigen/src/MetisSupport/: ._MetisSupport.h
include/Eigen/src/OrderingMethods/: ._Amd.h  ._Eigen_Colamd.h  ._Ordering.h
include/Eigen/src/PaStiXSupport/: ._PaStiXSupport.h
include/Eigen/src/PardisoSupport/: ._PardisoSupport.h
include/Eigen/src/QR/: ._ColPivHouseholderQR.h  ._ColPivHouseholderQR_LAPACKE.h  ._CompleteOrthogonalDecomposition.h  ._FullPivHouseholderQR.h  ._HouseholderQR.h  ._HouseholderQR_LAPACKE.h
include/Eigen/src/SPQRSupport/: ._SuiteSparseQRSupport.h
include/Eigen/src/SVD/: ._BDCSVD.h  ._JacobiSVD.h  ._JacobiSVD_LAPACKE.h  ._SVDBase.h  ._UpperBidiagonalization.h
include/Eigen/src/SparseCholesky/: ._SimplicialCholesky.h  ._SimplicialCholesky_impl.h
include/Eigen/src/SparseCore/: ._AmbiVector.h  ._CompressedStorage.h  ._ConservativeSparseSparseProduct.h  ._MappedSparseMatrix.h  ._SparseAssign.h  ._SparseBlock.h  ._SparseColEtree.h  ._SparseCompressedBase.h  ._SparseCwiseBinaryOp.h  ._SparseCwiseUnaryOp.h  ._SparseDenseProduct.h  ._SparseDiagonalProduct.h  ._SparseDot.h  ._SparseFuzzy.h  ._SparseMap.h  ._SparseMatrix.h  ._SparseMatrixBase.h  ._SparsePermutation.h  ._SparseProduct.h  ._SparseRedux.h  ._SparseRef.h  ._SparseSelfAdjointView.h  ._SparseSolverBase.h  ._SparseSparseProductWithPruning.h  ._SparseTranspose.h  ._SparseTriangularView.h  ._SparseUtil.h  ._SparseVector.h  ._SparseView.h  ._TriangularSolver.h
include/Eigen/src/SparseLU/: ._SparseLU.h  ._SparseLUImpl.h  ._SparseLU_Memory.h  ._SparseLU_Structs.h  ._SparseLU_SupernodalMatrix.h  ._SparseLU_Utils.h  ._SparseLU_column_bmod.h  ._SparseLU_column_dfs.h  ._SparseLU_copy_to_ucol.h  ._SparseLU_gemm_kernel.h  ._SparseLU_heap_relax_snode.h  ._SparseLU_kernel_bmod.h  ._SparseLU_panel_bmod.h  ._SparseLU_panel_dfs.h  ._SparseLU_pivotL.h  ._SparseLU_pruneL.h  ._SparseLU_relax_snode.h
include/Eigen/src/SparseQR/: ._SparseQR.h
include/Eigen/src/StlSupport/: ._StdDeque.h  ._StdList.h  ._StdVector.h  ._details.h
include/Eigen/src/SuperLUSupport/: ._SuperLUSupport.h
include/Eigen/src/UmfPackSupport/: ._UmfPackSupport.h
include/Eigen/src/misc/: ._Image.h  ._Kernel.h  ._RealSvd2x2.h  ._blas.h  (+3 more)
src/: inverted_pendulum.cpp  inverted_pendulum.h  main.cpp
(+118 files in other folders)
